@@ -2915,6 +2915,9 @@
   bool OSDMenuPop(void);
   void OSDMenuSaveMyRegion(word Rgn);
 
+  //List box
+  bool OSDMenuListBoxInitialize(bool AllowScrollingOfLongText, bool HasValueColumn, bool NumberedItems, bool ScrollLoop, const char *Title, dword x, dword width, bool OSDUpdate);
+
   //Memo
   void OSDMemoInitialize(bool ScrollLoop, const char *TitleLeft, const char *TitleRight, const char *Text);
 
