@@ -1146,3 +1146,4 @@ The following functions accept any form a path. The INI and language INI functio
 2019-12-12  Fixed: isMJD() had a year 2020 problem
             Added: OSDMenuItemModifyValueArrows()
             Modified: Void cursor when OSD is dirty (instead of only when number of lines changes)
+            Added: New menu type "ListBox" (supporting basically all existing menu features)
